
add_executable(yolo5_cls "yolo5_cls.cpp")
target_link_libraries(yolo5_cls ${PROJECT_NAME})

add_executable(yolo5_det "yolo5_det.cpp")
target_link_libraries(yolo5_det ${PROJECT_NAME})

add_executable(yolo5_det2 "yolo5_det2.cpp")
target_link_libraries(yolo5_det2 ${PROJECT_NAME})

add_executable(yolo5_det3 "yolo5_det3.cpp")
target_link_libraries(yolo5_det3 ${PROJECT_NAME})

add_executable(yolo5_seg "yolo5_seg.cpp")
target_link_libraries(yolo5_seg ${PROJECT_NAME})

add_executable(yolo5_seg2 "yolo5_seg2.cpp")
target_link_libraries(yolo5_seg2 ${PROJECT_NAME})

add_executable(yolo5u_det "yolo5u_det.cpp")
target_link_libraries(yolo5u_det ${PROJECT_NAME})

add_executable(yolo8_cls "yolo8_cls.cpp")
target_link_libraries(yolo8_cls ${PROJECT_NAME})

add_executable(yolo8_cls2 "yolo8_cls2.cpp")
target_link_libraries(yolo8_cls2 ${PROJECT_NAME})

add_executable(yolo8_det "yolo8_det.cpp")
target_link_libraries(yolo8_det ${PROJECT_NAME})

add_executable(yolo8_det2 "yolo8_det2.cpp")
target_link_libraries(yolo8_det2 ${PROJECT_NAME})

add_executable(yolo8_det3 "yolo8_det3.cpp")
target_link_libraries(yolo8_det3 ${PROJECT_NAME})

add_executable(yolo8_det4 "yolo8_det4.cpp")
target_link_libraries(yolo8_det4 ${PROJECT_NAME})

add_executable(yolo8_obb "yolo8_obb.cpp")
target_link_libraries(yolo8_obb ${PROJECT_NAME})

add_executable(yolo8_obb2 "yolo8_obb2.cpp")
target_link_libraries(yolo8_obb2 ${PROJECT_NAME})

add_executable(yolo8_pose "yolo8_pose.cpp")
target_link_libraries(yolo8_pose ${PROJECT_NAME})

add_executable(yolo8_seg "yolo8_seg.cpp")
target_link_libraries(yolo8_seg ${PROJECT_NAME})

add_executable(yolo8_seg2 "yolo8_seg2.cpp")
target_link_libraries(yolo8_seg2 ${PROJECT_NAME})

add_executable(yolo11_cls "yolo11_cls.cpp")
target_link_libraries(yolo11_cls ${PROJECT_NAME})

add_executable(yolo11_cls2 "yolo11_cls2.cpp")
target_link_libraries(yolo11_cls2 ${PROJECT_NAME})

add_executable(yolo11_det "yolo11_det.cpp")
target_link_libraries(yolo11_det ${PROJECT_NAME})

add_executable(yolo11_obb "yolo11_obb.cpp")
target_link_libraries(yolo11_obb ${PROJECT_NAME})

add_executable(yolo11_obb2 "yolo11_obb2.cpp")
target_link_libraries(yolo11_obb2 ${PROJECT_NAME})

add_executable(yolo11_pose "yolo11_pose.cpp")
target_link_libraries(yolo11_pose ${PROJECT_NAME})

add_executable(yolo11_pose2 "yolo11_pose2.cpp")
target_link_libraries(yolo11_pose2 ${PROJECT_NAME})

add_executable(yolo11_seg "yolo11_seg.cpp")
target_link_libraries(yolo11_seg ${PROJECT_NAME})

add_executable(yolo11_seg2 "yolo11_seg2.cpp")
target_link_libraries(yolo11_seg2 ${PROJECT_NAME})

add_executable(yolo26_cls "yolo26_cls.cpp")
target_link_libraries(yolo26_cls ${PROJECT_NAME})

add_executable(yolo26_det "yolo26_det.cpp")
target_link_libraries(yolo26_det ${PROJECT_NAME})

add_executable(yolo26_det2 "yolo26_det2.cpp")
target_link_libraries(yolo26_det2 ${PROJECT_NAME})

add_executable(yolo26_obb "yolo26_obb.cpp")
target_link_libraries(yolo26_obb ${PROJECT_NAME})

add_executable(yolo26_pose "yolo26_pose.cpp")
target_link_libraries(yolo26_pose ${PROJECT_NAME})

add_executable(yolo26_seg "yolo26_seg.cpp")
target_link_libraries(yolo26_seg ${PROJECT_NAME})

add_executable(yolo26_seg2 "yolo26_seg2.cpp")
target_link_libraries(yolo26_seg2 ${PROJECT_NAME})